# chameleon-quant

./: .dockerignore  .gitignore  Dockerfile  README.md  compose-win.yml  compose.yml  copy_file.bat  multistage.Dockerfile  push git.bat  pyproject.toml
.github/workflows/: docker-image.yml
src/backtest/: backtest.py  backtest_framework.py  backtest_long.py  backtest_short.py
src/bot/: trading_robot.py
src/data_api/: data_api.py
src/demo_ipynb/: test_api.ipynb  test_api.py  trad_api.ipynb
src/fastfinance/: benchmark.py  fastfinance.py
src/optimize/: run_optuna.py
src/plot/: bokeh_plot.py  bokeh_server.py  plot.py
src/telegram_bot/: fast_api_demo.py  telegram_bot.py
src/tools/: strategy_tools.py
src/trade_api/: trade_api.py
